# mikuTemplar

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/: const.h  ext_dataframe.h  io.h  martin_dataframe.h  martin_simulator.h  origin_dataframe.h  queue_with_max_min.h  stack_with_max_min.h  tick.h  utils.h
cpp/include/core/: const.h  ext_dataframe.h  io.h  martin_dataframe.h  martin_info.h  martin_optimizer.h  martin_parameters.h  martin_simulator.h  martin_statistics.h  operation.h  origin_dataframe.h  preprocess_dataframe.h  tick.h
cpp/include/utils/: best_weight_solver.h  helper.h  queue_with_max_min.h  stack_with_max_min.h  timer.h
cpp/src/: ext.cpp  martin_ext.cpp  martin_sample.cpp  martin_sampling.cpp  martin_search.cpp  martin_sim.cpp  playground.cpp
cpp/src/core/: martin_simulator.cpp
python/: .gitignore  forex_tick_preprocess.py
python/app/martin/: martin_sim.py
python/app/utils/: data_loader.py  queue.py
