project(mikuTemplar)
cmake_minimum_required(VERSION 3.22)
#find_package(ortools CONFIG REQUIRED)
set(CMAKE_CXX_STANDARD 20)

include_directories("include")
add_executable(martin_ext  "src/martin_ext.cpp")
add_executable(martin_sim  "src/martin_sim.cpp")
add_executable(martin_search  "src/martin_search.cpp")
add_executable(martin_sampling  "src/martin_sampling.cpp")
add_executable(playground  "src/playground.cpp")
